--- a/src/app/components_paginas/noticias/noticias.component.scss
+++ b/src/app/components_paginas/noticias/noticias.component.scss
@@ -108,7 +108,7 @@
   font-size: 12px;
   line-height: 15px;
 
-  color: #A8A0A0;
+  color: #2e69ce;
 }
 
 .titulot{
@@ -142,7 +142,7 @@
   line-height: 15px;
   text-align: right;
 
-  color: #A8A0A0;
+  color: #2e69ce;
 }
 
 .infon{
